--- a/app/src/main/res/layout/fragment_bank_mandate_success.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate_success.xml
@@ -28,9 +28,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
-                android:padding="@dimen/space_8"
                 android:gravity="center_horizontal"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/space_8">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/view2"
@@ -183,8 +183,8 @@
                 android:layout_marginBottom="@dimen/space_4"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:fontFamily="@font/lato_bold"
-                android:text="@string/invest"
-                android:textAllCaps="false"
+                android:text="@string/check_mandate_status"
+                android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/white" />
 
