--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -19,8 +19,8 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_cart_view"
             android:layout_margin="@dimen/default_space"
+            android:background="@drawable/shape_cart_view"
             android:elevation="@dimen/space_2"
             android:padding="@dimen/space_8">
 
@@ -77,6 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:enabled="@{vm.isEdit()}"
                 android:hint="@string/full_name"
@@ -111,6 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
                 android:layout_marginEnd="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:enabled="@{vm.isEdit()}"
                 android:hint="@string/pan_number"
@@ -149,8 +151,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_4"
                 android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:drawableEnd="@drawable/ic_calendar"
+                android:enabled="@{vm.isEdit()}"
                 android:hint="@string/date_of_birth_"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
@@ -181,6 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:enabled="@{vm.isEdit()}"
                 android:hint="@string/name_of_guardian"
@@ -198,6 +203,194 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvGuardian" />
 
+            <TextView
+                android:id="@+id/tvAddressL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:text="@string/address"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edtGuardian" />
+
+            <EditText
+                android:id="@+id/edtAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
+                android:background="@drawable/shape_edt_gray_round"
+                android:enabled="@{vm.isEdit()}"
+                android:hint="@string/address"
+                android:inputType="textCapSentences"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.address}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvAddressL" />
+
+
+            <TextView
+                android:id="@+id/tvCityL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_4"
+                android:text="@string/city"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toStartOf="@id/tvDOBL"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edtAddress" />
+
+            <EditText
+                android:id="@+id/edtCity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_4"
+                android:layout_marginEnd="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
+                android:background="@drawable/shape_edt_gray_round"
+                android:enabled="@{vm.isEdit()}"
+                android:hint="@string/city"
+                android:inputType="textCapCharacters"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.city}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toStartOf="@id/edtDOB"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvCityL" />
+
+
+            <TextView
+                android:id="@+id/tvPincodeL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_4"
+                android:layout_marginTop="@dimen/default_space"
+                android:text="@string/pincode"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/tvCityL"
+                app:layout_constraintTop_toBottomOf="@id/edtAddress" />
+
+            <EditText
+                android:id="@+id/edtPincode"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_4"
+                android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
+                android:background="@drawable/shape_edt_gray_round"
+                android:enabled="@{vm.isEdit()}"
+                android:hint="@string/pincode"
+                android:inputType="number"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.pincode}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/edtCity"
+                app:layout_constraintTop_toBottomOf="@id/tvPincodeL" />
+
+
+            <TextView
+                android:id="@+id/tvStateL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_4"
+                android:text="@string/state"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toStartOf="@id/tvDOBL"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edtCity" />
+
+            <TextView
+                android:id="@+id/tvState"
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="@dimen/space_4"
+                android:layout_marginEnd="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
+                android:background="@drawable/shape_edt_gray_round"
+                android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                android:enabled="@{vm.isEdit()}"
+                android:hint="@string/state"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.state}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toStartOf="@id/edtDOB"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvStateL" />
+
+
+            <TextView
+                android:id="@+id/tvCountryL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_4"
+                android:layout_marginTop="@dimen/default_space"
+                android:text="@string/country"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/tvStateL"
+                app:layout_constraintTop_toBottomOf="@id/edtPincode" />
+
+            <EditText
+                android:id="@+id/edtCountry"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_4"
+                android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
+                android:background="@drawable/shape_edt_gray_round"
+                android:enabled="@{vm.isEdit()}"
+                android:hint="@string/country"
+                android:inputType="textCapSentences"
+                android:maxLines="1"
+                android:paddingStart="@dimen/default_space"
+                android:paddingTop="@dimen/space_8"
+                android:paddingEnd="@dimen/default_space"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@={vm.country}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/black"
+                android:textColorHint="@color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/tvState"
+                app:layout_constraintTop_toBottomOf="@id/tvCountryL" />
 
             <TextView
                 android:id="@+id/tvEmailID"
@@ -207,13 +400,14 @@
                 android:text="@string/email_id"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edtGuardian" />
+                app:layout_constraintTop_toBottomOf="@id/tvState" />
 
             <EditText
                 android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:enabled="@{vm.isEdit()}"
                 android:hint="@string/email_id"
@@ -247,6 +441,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:enabled="@{vm.isEdit()}"
                 android:hint="@string/mobile_number"
@@ -279,6 +474,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_4"
+                android:alpha="@{vm.alpha}"
                 android:background="@drawable/shape_edt_gray_round"
                 android:enabled="@{vm.isEdit()}"
                 android:hint="@string/occupation"
@@ -305,15 +501,12 @@
                 android:background="@drawable/shape_btn_idle_bg"
                 android:fontFamily="@font/lato_semibold"
                 android:text="@{vm.isEdit() ? @string/save : @string/edit_profile}"
-                android:textAllCaps="false"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/edtOcc"
                 tools:text="@string/edit_profile" />
-
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
