--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -29,8 +29,8 @@
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
-                android:padding="8dp"
                 android:lineSpacingExtra="4dp"
+                android:padding="8dp"
                 android:text="@string/financial_goals_assist"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +45,7 @@
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:padding="@dimen/space_4"
+                android:visibility="gone"
                 app:layoutManager="android.support.v7.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +54,8 @@
                 app:layout_constraintVertical_bias="0"
                 app:spanCount="2"
                 tools:itemCount="6"
-                tools:listitem="@layout/row_goal_list_item" />
+                tools:listitem="@layout/row_goal_list_item"
+                tools:visibility="visible" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
