--- a/app/src/main/res/layout/row_goal_list_item.xml
+++ b/app/src/main/res/layout/row_goal_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="goal"
-            type="com.tarrakki.module.goal.Goal" />
+            type="com.tarrakki.api.model.Goal.Data" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -20,10 +20,10 @@
 
         <ImageView
             android:id="@+id/ivItem"
+            imgUrl="@{goal.goalImage}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            app:imgUrl="@{goal.imgUrl}"
             android:paddingBottom="@dimen/space_20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,15 +37,15 @@
             android:gravity="center"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{goal.title}"
+            android:text="@{goal.goal}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivItem"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="1"
             tools:text="Wealth creation" />
 
