1. implemented dynamic goal questions. 2. implemented dynamic validation for goal questions.  3: Worked on implementing the dynamic goal summary.

--- a/app/src/main/res/layout/fragment_initiate_your_goal.xml
+++ b/app/src/main/res/layout/fragment_initiate_your_goal.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="goal"
-            type="com.tarrakki.api.model.Goal.Data" />
+            type="com.tarrakki.api.model.Goal.Data.GoalData" />
 
     </data>
 
