--- a/app/src/main/res/layout/set_your_goal_step1.xml
+++ b/app/src/main/res/layout/set_your_goal_step1.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="goal"
-            type="com.tarrakki.api.model.Goal.Data" />
+            type="com.tarrakki.api.model.Goal.Data.GoalData" />
 
         <variable
             name="onEditorAction"
