--- a/app/src/main/res/layout/paget_your_goal_step.xml
+++ b/app/src/main/res/layout/paget_your_goal_step.xml
@@ -119,103 +119,119 @@
 
             </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/tvGoalValueL"
+            <LinearLayout
+                android:id="@+id/llContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_32"
-                android:fontFamily="@font/lato_semibold"
-                android:gravity="center"
-                android:text="@{yourGoal.question}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/semi_black"
-                app:layout_constraintTop_toBottomOf="@+id/view2"
-                tools:text="@string/do_want_lumpsum" />
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/view2" />
+            <!-- <TextView
+                 android:id="@+id/tvGoalValueL"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="@dimen/space_32"
+                 android:fontFamily="@font/lato_semibold"
+                 android:gravity="center"
+                 android:text="@{yourGoal.question}"
+                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                 android:textColor="@color/semi_black"
+                 app:layout_constraintTop_toBottomOf="@+id/view2"
+                 tools:text="@string/current_value_of_your_dream_home" />
 
-            <ToggleButton
-                android:id="@+id/switchHasHomeLoan"
-                android:layout_width="96dp"
-                android:layout_height="38dp"
-                android:layout_marginTop="@dimen/default_space"
-                android:background="@drawable/shape_switch_bg"
-                android:button="@null"
-                android:checked="@{yourGoal.selected}"
-                android:onClick="@{yourGoal.onToggleClick}"
-                android:textOff=""
-                android:textOn=""
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvGoalValueL"
-                tools:checked="true" />
+             <LinearLayout
+                 android:id="@+id/llContainer"
+                 android:layout_width="200dp"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="@dimen/default_space"
+                 android:background="@drawable/shape_rounded_gray"
+                 android:gravity="center_vertical"
+                 android:orientation="horizontal"
+                 android:padding="@dimen/space_8"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/tvGoalValueL">
 
-            <net.cachapa.expandablelayout.ExpandableLayout
-                android:id="@+id/expandableLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:el_duration="500"
-                app:expanded="@{yourGoal.selected}"
-                app:layout_constraintTop_toBottomOf="@+id/switchHasHomeLoan"
-                tools:el_expanded="true">
+                 <TextView
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginStart="@dimen/space_8"
+                     android:layout_marginEnd="@dimen/space_8"
+                     android:text="@string/rs_symbol"
+                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                     android:textColor="@color/semi_black" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
+                 <EditText
+                     android:id="@+id/edtInvestAmount"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:background="@null"
+                     android:hint="1,00,000"
+                     android:inputType="number"
+                     android:text="@={yourGoal.goal.investmentAmount}"
+                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                     android:textColor="@color/semi_black"
+                     app:isPositiveCurrency="@{true}" />
 
-                    <TextView
-                        android:id="@+id/tvGoalDurationL"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/space_30"
-                        android:fontFamily="@font/lato_semibold"
-                        android:gravity="center"
-                        android:text="@{yourGoal.question2}"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                        android:textColor="@color/semi_black"
-                        app:layout_constraintTop_toBottomOf="@+id/switchHasHomeLoan"
-                        tools:text="@string/how_much" />
+             </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/llContainer"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/default_space"
-                        android:background="@drawable/shape_rounded_gray"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/space_8"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvGoalDurationL">
+             <TextView
+                 android:id="@+id/tvGoalDurationL"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="@dimen/space_30"
+                 android:fontFamily="@font/lato_semibold"
+                 android:gravity="center"
+                 android:text="@{yourGoal.question2}"
+                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                 android:textColor="@color/semi_black"
+                 app:layout_constraintTop_toBottomOf="@+id/llContainer"
+                 tools:text="@string/numbers_of_years_you_d_like_to_buy_it" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/space_8"
-                            android:layout_marginEnd="@dimen/space_8"
-                            android:text="@string/rs_symbol"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                            android:textColor="@color/semi_black" />
+             <RelativeLayout
+                 android:id="@+id/llContainer2"
+                 android:layout_width="200dp"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="@dimen/default_space"
+                 android:background="@drawable/shape_rounded_gray"
+                 android:gravity="center_vertical"
+                 android:orientation="horizontal"
+                 android:padding="@dimen/space_8"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/tvGoalDurationL">
 
-                        <EditText
-                            android:id="@+id/edtInvestAmount"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@null"
-                            android:hint="1,00,000"
-                            android:imeOptions="actionNext"
-                            android:inputType="number"
-                            android:text="@={yourGoal.answered2}"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                            android:textColor="@color/semi_black"
-                            app:isPositiveCurrency="@{true}"
-                            app:onEditorAction="@{onEditorAction}" />
+                 <EditText
+                     android:id="@+id/edtDurations"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_alignParentStart="true"
+                     android:layout_marginStart="@dimen/space_8"
+                     android:layout_marginEnd="@dimen/space_8"
+                     android:layout_toStartOf="@+id/tvDurations"
+                     android:background="@null"
+                     android:imeOptions="actionNext"
+                     android:inputType="number"
+                     android:maxLength="2"
+                     android:text="@={yourGoal.goal.investmentDuration}"
+                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                     android:textColor="@color/semi_black"
+                     app:isPositiveCurrency="@{true}"
+                     app:onEditorAction="@{onEditorAction}" />
 
-                    </LinearLayout>
+                 <TextView
+                     android:id="@+id/tvDurations"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_alignParentEnd="true"
+                     android:layout_marginStart="@dimen/space_8"
+                     android:layout_marginEnd="@dimen/space_8"
+                     android:fontFamily="@font/lato_semibold"
+                     android:text="@string/years"
+                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                     android:textColor="@color/semi_black" />
 
-                </LinearLayout>
-            </net.cachapa.expandablelayout.ExpandableLayout>
+
+             </RelativeLayout>-->
 
             <Button
                 android:id="@+id/btnPrevious"
@@ -229,7 +245,6 @@
                 android:drawablePadding="@dimen/space_8"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
-                android:onClick="@{yourGoal.onPrevious}"
                 android:paddingStart="20dp"
                 android:paddingEnd="24dp"
                 android:text="@string/previous"
@@ -238,7 +253,7 @@
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@id/expandableLayout"
+                app:layout_constraintTop_toBottomOf="@id/llContainer"
                 app:layout_constraintVertical_bias="1" />
 
             <Button
@@ -252,7 +267,6 @@
                 android:drawableEnd="@drawable/ic_arrow_next_white"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
-                android:onClick="@{yourGoal.onNext}"
                 android:paddingStart="38dp"
                 android:paddingEnd="28dp"
                 android:text="@string/next"
@@ -261,7 +275,7 @@
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
-                app:layout_constraintTop_toBottomOf="@id/expandableLayout"
+                app:layout_constraintTop_toBottomOf="@id/llContainer"
                 app:layout_constraintVertical_bias="1" />
 
             <android.support.constraint.Guideline
